--- a/index.html
+++ b/index.html
@@ -1,4 +1,81 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <meta charset="utf-8">
+    <title>simple food</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <header>
+        <h1><img src="images/img_logo.png"></h1>
+        <div class="nav-grobal">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Recipes</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <article>
+            <section>
+                <img src="images/pic_menu01.png">
+            </section>
+            <section>
+                <h2>Butternut Squash Soup</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+            </section>
+        </article>
+        <article>
+            <section>
+                <img src="images/pic_menu02.png">
+            </section>
+            <section>
+                <h2>Butternut Squash Soup</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+            </section>
+        </article>
+        <article>
+            <section>
+                <img src="images/pic_menu03.png">
+            </section>
+            <section>
+                <h2>Butternut Squash Soup</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+            </section>
+        </article>
+        <article>
+            <section>
+                <img src="images/pic_menu04.png">
+            </section>
+            <section>
+                <h2>Butternut Squash Soup</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+            </section>
+        </article>
+
+        <div class="newsletter">
+            <div class="inner">
+                <h3>Subscribe to newsletter</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                    ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                <a href="">Add my email to the list</a>
+                <p>Address</p>
+                <p>2, Lorem Street, Plymouth,
+                    Devon,</p>
+                <p>Tel</p>
+                <p>0800-000-000</p>
+                <p>Email</p>
+                <p>loremipsum@yoursite.com</p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>Copyright @ Simple Food 2020</p>
+    </footer>
+</body>
+
 </html>
