--- a/index.html
+++ b/index.html
@@ -19,42 +19,48 @@
         </div>
     </header>
     <main>
-        <article>
-            <section>
-                <img src="images/pic_menu01.png">
-            </section>
-            <section>
-                <h2>Butternut Squash Soup</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-            </section>
-        </article>
-        <article>
-            <section>
-                <img src="images/pic_menu02.png">
-            </section>
-            <section>
-                <h2>Butternut Squash Soup</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-            </section>
-        </article>
-        <article>
-            <section>
-                <img src="images/pic_menu03.png">
-            </section>
-            <section>
-                <h2>Butternut Squash Soup</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-            </section>
-        </article>
-        <article>
-            <section>
-                <img src="images/pic_menu04.png">
-            </section>
-            <section>
-                <h2>Butternut Squash Soup</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-            </section>
-        </article>
+        <div class="inner">
+            <article>
+                <section>
+                    <img src="images/pic_menu01.png">
+                </section>
+                <section class="text">
+                    <h2>Butternut Squash Soup</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
+                    </p>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <img src="images/pic_menu02.png">
+                </section>
+                <section class="text">
+                    <h2>Butternut Squash Soup</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
+                    </p>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <img src="images/pic_menu03.png">
+                </section>
+                <section class="text">
+                    <h2>Butternut Squash Soup</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
+                    </p>
+                </section>
+            </article>
+            <article>
+                <section>
+                    <img src="images/pic_menu04.png">
+                </section>
+                <section class="text">
+                    <h2>Butternut Squash Soup</h2>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.
+                    </p>
+                </section>
+            </article>
+        </div>
 
         <div class="newsletter">
             <div class="inner">
@@ -62,13 +68,21 @@
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                     ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                 <a href="">Add my email to the list</a>
-                <p>Address</p>
-                <p>2, Lorem Street, Plymouth,
-                    Devon,</p>
-                <p>Tel</p>
-                <p>0800-000-000</p>
-                <p>Email</p>
-                <p>loremipsum@yoursite.com</p>
+                <div class="mail">
+                    <dl>
+                        <dt>Address</dt>
+                        <dd>2, Lorem Street, Plymouth,
+                            Devon,</dd>
+                    </dl>
+                    <dl>
+                        <dt>Tel</dt>
+                        <dd>0800–000-000</dd>
+                    </dl>
+                    <dl>
+                        <dt>Email</dt>
+                        <dd>loremipsum@yoursite.com</dd>
+                    </dl>
+                </div>
             </div>
         </div>
     </main>
